--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -70,9 +70,10 @@
 				<i class="fa-regular fa-image"></i>
 				<label for="imageUrl" class="addImgBtn">+ Ajouter photo</label>
 				<input type="file" id="imageUrl" name="imageUrl" accept="image/png, image/jpeg, image/gif" style="display: none;" required="true">
-				
 				<p class="imgSizeTxt">jpg, png : 4mo max</p>
+				<img id="previewImage" class="previewImage" src="" alt="Aperçu de l'image">
 			</div>
+
 			<div id="globalForm" class="globalForm">
 				<h4 id="imgTitleText" class="titleAndCategory">Titre</h4>
 				<input type="text" id="imgTitle" name="imgTitle" required="true">
@@ -118,7 +119,7 @@
 
 <script src="script.js"></script>
 <script src="modale.js"></script>
-<script src="modale2.js"></script>
+<!-- <script src="modale2.js"></script> -->
 <script src="login.js"></script>
 
 </body>
