--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -54,7 +54,7 @@
 					<h3 id="modal-title1">Galerie Photo</h3>
 					<div id="modal-content1" class="modal-content modal-gallery"></div>
 					<div id="greyLine1" class="greyLine"></div>
-					<button id="addButton1" class="addWorksBtn modal-trigger">Ajouter une photo</button>
+					<button id="addButton1" class="addWorksBtn">Ajouter une photo</button>
 				</div>
 			</div>
 		</div>
